<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <TextView
            android:id="@+id/firstDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp"
    />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastDisplay"
            app:layout_constraintTop_toBottomOf="@id/firstDisplay"
            android:textSize="30sp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lastDisplay"
            android:id="@+id/addressDisplay"
            android:textSize="30sp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cityDisplay"
            app:layout_constraintTop_toBottomOf="@id/addressDisplay"
            android:textSize="30sp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stateDisplay"
            app:layout_constraintTop_toBottomOf="@id/cityDisplay"
            android:textSize="30sp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stateDisplay"
            android:id="@+id/zipDisplay"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>


    <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_first_name"
            app:layout_constraintTop_toBottomOf="@id/zipDisplay"
            android:layout_marginTop="20dp"
            android:inputType="text"/>

    <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            android:hint="@string/enter_your_last_name"/>

    <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            android:hint="@string/enter_your_address"/>

    <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etAddress"
            android:hint="@string/enter_your_city"/>

    <EditText
            android:id="@+id/etState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etCity"
            android:hint="@string/enter_your_state"/>

    <EditText
            android:id="@+id/etZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etState"
            android:hint="@string/enter_your_zip_code"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            app:layout_constraintTop_toBottomOf="@id/etZip"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/submit"/>


</androidx.constraintlayout.widget.ConstraintLayout>